--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.7.0",
     "nodemon": "^1.19.3",
     "path": "^0.12.7",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/sequelize": "^4.28.6",
-    "@types/express-handlebars": "^0.0.33"
+    "@types/express-handlebars": "^0.0.33",
+    "@types/jsonwebtoken": "^8.3.5"
   }
 }
